syntax = "proto3";

package proto.services;

option java_multiple_files = true;
option java_package = "proto.services.evento_externo";

import "google/protobuf/empty.proto";
import "services/kafka_service.proto";

message IdEventoExternoRequestProto {
    int64 idEventoExterno = 1;
}

service EventoExternoService {
    rpc EliminarEventoExterno(IdEventoExternoRequestProto) returns (google.protobuf.Empty);
    rpc AdherirParticipanteInterno(proto.services.kafka.AdhesionVoluntarioExternoRequestProto) returns (google.protobuf.Empty);
}